
==== Improved Error Messages for Missing Configuration

When a bean is not present due to missing configuration (such as a bean that uses ann:context.annotation.EachProperty[]) error messages have been improved to display the configuration that is required to activate the bean.

==== Improved Error Messages for Missing Beans

When a bean annotated with ann:context.annotation.EachProperty[] or ann:context.annotation.Bean[] is not found due to missing configuration an error is thrown showing the configuration prefix necessary to resolve the issue.

==== Tracking of Disabled Beans

Beans that are disabled via <<conditionalBeans, Bean Requirements>> are now tracked and an appropriate error thrown if a bean has been disabled.

The disabled beans are also now visible via the <<beansEndpoint, Beans Endpoint>> in the <<management, Management module>> aiding in understanding the state of your application configuration.

=== HTTP Changes

==== Initial Support for Virtual Threads (Loom)

Preview <<virtualThreads, support for Virtual Threads>> has been added. When using JDK 19 or above with preview features enabled you can off load processing to a virtual thread pool.

==== Experimental Support for HTTP/3

Experimental Support for HTTP/3 via the Netty incubator project has been added.

==== Experimental Support for io_uring

Experimental support for https://en.wikipedia.org/wiki/Io_uring[io_uring] via the Netty incubator project has been added.

==== Rewritten HTTP layer

The HTTP layer has been rewritten to improve performance and reduce the presence of reactive stack frames if reactive is not used (such as with Virtual threads).

==== Annotation-Based HTTP Filters

See <<filtermethods, Filter Methods>>

==== JDK HTTP Client

<<javanetClient, Additional implementation of the HTTP Client based on Java HTTP Client>>


=== Breaking Changes

<<breaks, Breaking changes in Micronaut framework 4.0>>
