@@ -88,6 +88,9 @@ See <<filtermethods, Filter Methods>>
 
 <<javanetClient, Additional implementation of the HTTP Client based on Java HTTP Client>>
 
+==== Context Propagation API
+
+Micronaut Framework 4 introduces a new <<contextPropagation, Context Propagation API>>, which aims to simplify reactor instrumentation, avoid thread-local usage, and integrate idiomatically with Kotlin Coroutines.
 
 === Breaking Changes
 
